--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
   <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
   <meta property="og:image" content="logos/centrodecompras.jpg">
@@ -20,11 +20,11 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="#">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo">
+        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo" />
       </a>
     </div>
     <div class="header-text">
-      <h1>Centro de Compra</h1>
+      <h1>Centro de Compras</h1>
       <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
     </div>
   </header>
@@ -40,90 +40,99 @@
     <aside class="sidebar-categorias">
       <h3>Categorias</h3>
       <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas as Categorias</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
-        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa e Decoração</li>
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</li>
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</li>
-        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</li>
-        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')">Celulares</li>
-        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')">Eletrodomésticos</li>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" role="button" aria-label="Filtrar por Todas as Categorias">Todas as Categorias</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')" role="button" aria-label="Filtrar por Eletrônicos">Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')" role="button" aria-label="Filtrar por Moda">Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')" role="button" aria-label="Filtrar por Fitness">Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')" role="button" aria-label="Filtrar por Casa e Decoração">Casa e Decoração</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')" role="button" aria-label="Filtrar por Beleza">Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')" role="button" aria-label="Filtrar por Esportes">Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')" role="button" aria-label="Filtrar por Livros">Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
+        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
+        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
       </ul>
     </aside>
-<main>
-  <section id="ofertas-section">
-    <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
-    <div class="lojas-parceiras">
-      <h3>🌟 Lojas Parceiras</h3>
-      <div class="grid-lojas">
-        <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')">
-          <span>Todas as Lojas</span>
+
+    <main>
+      <section id="ofertas-section">
+        <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" role="button" aria-label="Filtrar por Todas as Lojas">
+              <span>Todas as Lojas</span>
+            </div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon">
+              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
+              <span class="amazon">Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu">
+              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
+              <span class="magalu">Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein">
+              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
+              <span class="shein">Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee">
+              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
+              <span class="shopee">Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre">
+              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
+              <span class="mercadolivre">Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba">
+              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
+              <span class="alibaba">Alibaba</span>
+            </div>
+          </div>
         </div>
-        <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-          <img src="logos/amazon.png" alt="Amazon" loading="lazy">
-          <span>Amazon</span>
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
+        <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
+        <div id="busca-feedback" class="busca-feedback"></div>
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="grid-lojas" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+        <div class="paginacao">
+          <button id="prev-page" disabled>Anterior</button>
+          <span id="page-info">Página 1</span>
+          <button id="next-page">Próxima</button>
         </div>
-        <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-          <img src="logos/magalu.png" alt="Magalu" loading="lazy">
-          <span>Magalu</span>
-        </div>
-        <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-          <img src="logos/shein.png" alt="Shein" loading="lazy">
-          <span>Shein</span>
-        </div>
-        <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-          <img src="logos/shopee.png" alt="Shopee" loading="lazy">
-          <span>Shopee</span>
-        </div>
-        <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-          <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy">
-          <span>Mercado Livre</span>
-        </div>
-        <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-          <img src="logos/alibaba.png" alt="Alibaba" loading="lazy">
-          <span>Alibaba</span>
-        </div>
+      </section>
+
+      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
+      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
+          <div class="icon">
+            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy">
+          </div>
+          <span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
+          <div class="icon">
+            <img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy">
+          </div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank">
+          <div class="icon">
+            <img src="logos/x.png" alt="Ícone do X" loading="lazy">
+          </div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
+          <div class="icon">
+            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy">
+          </div>
+          <span>YouTube</span>
+        </a>
       </div>
-    </div>
-    <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
-    <div id="busca-feedback" class="busca-feedback"></div>
-    <div class="loading-spinner" id="loading-spinner"></div>
-    <div class="grid-lojas" id="grid-produtos"></div>
-    <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-    <p class="error-message" id="error-message" style="display: none;"></p>
-    <div id="paginacao" class="paginacao">
-      <button id="prev-page" disabled>Anterior</button>
-      <span id="page-info">Página 1</span>
-      <button id="next-page">Próxima</button>
-    </div>
-  </section>
-
-  <div class="social-links">
-    <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank">
-      <div class="icon"><img src="logos/tiktok.jpg" alt="TikTok" loading="lazy"></div>
-      <span>TikTok</span>
-    </a>
-    <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank">
-      <div class="icon"><img src="logos/instagram.jpg" alt="Instagram" loading="lazy"></div>
-      <span>Instagram</span>
-    </a>
-    <a href="https://x.com/ComprasCdc" target="_blank">
-      <div class="icon"><img src="logos/x.png" alt="X" loading="lazy"></div>
-      <span>X</span>
-    </a>
-    <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-      <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy"></div>
-      <span>YouTube</span>
-    </a>
-  </div>
-
-  <a href="https://wa.me/5521975179737" class="whatsapp" target="_blank">📲 Atendimento via WhatsApp</a>
-  <a href="https://t.me/boost/centraldecomprascdc" class="telegram" target="_blank">📢 Canal no Telegram</a>
-</main>
-
+    </main>
   </div>
 
   <div class="modal" id="imageModal">
@@ -131,18 +140,18 @@
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
       <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)"></button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
 
   <footer>
-    <p> Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
   </footer>
 
   <div class="robo-assistente">
     <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
@@ -150,4 +159,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
