--- a/index.html
+++ b/index.html
@@ -93,14 +93,9 @@
         <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-lojas" id="grid-produtos"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
         <p class="error-message" id="error-message" style="display: none;"></p>
-        <div class="paginacao">
-          <button id="prev-page" disabled>Anterior</button>
-          <span id="page-info">Página 1</span>
-          <button id="next-page">Próxima</button>
-        </div>
       </section>
 
       <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
@@ -140,7 +135,7 @@
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
       <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)">►</button>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
