--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
