--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </ul>
         </div>
       </div>
-      <p>Todos os direitos reservados &copy; Grupo Centro de Compra "CdC" <span id="year"></span></p>
+      <p>Todos os direitos reservados © Grupo Centro de Compra "CdC" <span id="year"></span></p>
     </div>
   </footer>
 
@@ -186,11 +186,5 @@
   </div>
 
   <script defer src="script.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelector('.toggle-menu').addEventListener('click', () => {
-      document.querySelector('.nav-mobile').classList.toggle('hidden');
-    });
-  </script>
 </body>
 </html>
