--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -39,8 +39,13 @@
       <option value="esportes">Esportes</option>
       <option value="livros">Livros</option>
       <option value="infantil">Infantil</option>
-      <option value="Celulares">Celulares</option>
-      <option value="Eletrodomésticos">Eletrodomésticos</option>
+      <option value="celulares">Celulares</option>
+      <option value="eletrodomesticos">Eletrodomésticos</option>
+      <option value="pet">Pet</option>
+      <option value="jardinagem">Jardinagem</option>
+      <option value="automotivo">Automotivo</option>
+      <option value="gastronomia">Gastronomia</option>
+      <option value="games">Games</option>
     </select>
     <select name="loja" required>
       <option value="" disabled selected>Selecione uma loja</option>
