--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="container">
       <div class="footer-content">
         <div>
-          <h4>Centro de Compras</h4>
+          <h4>Centro de Compra</h4>
           <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
         </div>
         <div>
